bug fix z-index

--- a/app/styles/_video-modal.scss
+++ b/app/styles/_video-modal.scss
@@ -3,7 +3,7 @@
         display: none;
     }
 
-    z-index: 5;
+    z-index: 6;
     position: absolute;
     background: white;
     width: 100vw;
